--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,16 +6,12 @@
   <title>Hello World!</title>
   <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+  $css
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-  node
-  <script>document.write(process.versions.node)</script>、
-  Chrome
-  <script>document.write(process.versions.chrome)</script>、
-  Electron
-  <script>document.write(process.versions.electron)</script> を使用しています。
+  <div id="root"></div>
+  $bundles
 </body>
 
 </html>
